testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionAnonymous.errors.txt
index.js(6,14): error TS2339: Property 't' does not exist on type 'exports'.


==== index.js (1 errors) ====
    module.exports = class {
        /**
         * @param {number} p
         */
        constructor(p) {
            this.t = 12 + p;
                 ~
!!! error TS2339: Property 't' does not exist on type 'exports'.
        }
    }